# countries-api-rust

./: Cargo.toml
src/: country.rs  error.rs  lib.rs  main.rs  response_util.rs  router.rs
src/data/: countries.csv
src/routes/: countries.rs  country.rs  mod.rs  not_found.rs
