[package]
name = "countries-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
csv = "1.1"
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.5"